--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="label_teacher"> Teacher </string>
     <string name="nextSignUp">NEXT</string>
     <string name="submit">Submit</string>
+    <string name="userNameStudent"></string>
     <string-array name="levels_array">
         <item>no level selected</item>
         <item>GI1</item>
